breaking changes to chunk api (moved to files api)
